# app/controller/jwt.js
@@ -1,45 +1,10 @@
 const { Controller } = require('egg')
-const crypto = require('crypto')
-const jwt = require('jsonwebtoken')
 
 module.exports = class JwtController extends Controller {
-	constructor(...args) {
-		super(...args)
-
-		const jwtConfig = this.config.jwt
-		Object.assign(this, {
-			PRIVATE_KEY: jwtConfig.key.private,
-			PUBLIC_KEY: crypto.createPublicKey(jwtConfig.key.private).export({
-				type: 'spki',
-				format: 'pem',
-			}),
-		})
-	}
-
-	async getToken(ctx) {
-		const token = {}
-
-		const role = await ctx.service.role.getByUserId(Buffer.from(ctx.session.user.id, 'hex'))
-		if (role && role.id && role.name) {
-			token.role = { name: role.name }
-			const websites = (await ctx.service.website.getByRoleId(role.id))
-			if (websites && websites.length > 0) {
-				token.websites = websites.map(({ name }) => name)
-			}
-		}
-
-		return jwt.sign({
-			user: {
-				name: ctx.session.user.name,
-			},
-			...token,
-		}, this.PRIVATE_KEY, { algorithm: 'ES256' })
-	}
-
 	async get() {
 		const { ctx } = this
 		const { response } = ctx
-		const token = await this.getToken(ctx)
+		const token = await ctx.service.jwt.getByUserId(Buffer.from(ctx.session.user.id, 'hex'))
 
 		response.body = {
 			token,
@@ -53,7 +18,7 @@ module.exports = class JwtController extends Controller {
 		const { return_to } = request.query
 
 		if (ctx.session.user) {
-			const token = await this.getToken(ctx)
+			const token = await ctx.service.jwt.getByUserId(Buffer.from(ctx.session.user.id, 'hex'))
 			response.redirect(`${return_to}?token=${token}`)
 		} else {
 			const path = this.config.sso.address + this.config.sso.authPath
@@ -79,13 +44,6 @@ module.exports = class JwtController extends Controller {
 
 		const { token } = params
 
-		let decoded
-		try {
-			decoded = jwt.verify(token, this.PUBLIC_KEY, { algorithm: 'ES256' })
-		} catch (err) {
-			// DO NOTHING
-		}
-
-		response.body = decoded
+		response.body = await ctx.service.jwt.verify(token)
 	}
 }
